--- a/review/templates/review/add_book.html
+++ b/review/templates/review/add_book.html
@@ -14,6 +14,8 @@
             <form method="post" enctype="multipart/form-data">
                 {{ book_form | crispy }}
                 {% csrf_token %}
+                
+                <!-- Submit Button -->
                 <button class="btn btn-secondary" type="submit">Submit</button>
             </form>
             {% else %}
