--- a/review/templates/review/review_detail.html
+++ b/review/templates/review/review_detail.html
@@ -51,7 +51,7 @@
           <!-- Add Book Button -->
           <form action="{% url 'add_to_read_list' book.id %}" method="post">
             {% csrf_token %}
-            <button type="submit" class="btn btn-book-add">Add Book</button>
+            <button type="submit" class="btn btn-book-add">Add to TBR</button>
           </form>
           {% endif %}
           <hr>
