--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,7 +21,7 @@ body {
     font-size: large;
 }
 
-h1 {
+h1, h2, h3 {
     color: var(--secondary-color);
     font-family: 'Alef', sans-serif;
     letter-spacing: 1px;
@@ -148,6 +148,20 @@ p {
     z-index: 2;
 }
 
+
+.list-group-item {
+    background-color: #292a33;;
+    text-decoration: none;
+}
+
+.custom-link {
+    color:var(--accent-color);
+    font-weight: 700;
+    text-decoration: none;
+}
+
+
+
 /* Bootstrap divider */
 
 .b-example-divider {
@@ -244,7 +258,39 @@ p {
     background-color: #292a33;
     transition: all 0.3s ease;
     text-align: left;
+}
 
+.image-flash {
+    position: absolute;
+    bottom: 75%;
+    min-width: 30%;
+    left: -2px;
+    background-color:var(--bg-color);
+    border-left:2px solid var(--secondary-color);
+    box-shadow: 2px 2px 5px var(--accent-color);
+}
+
+.image-container {
+    position: relative;
+}
+
+.author {
+    color: white;
+    margin: 4px;
+}
+/* Hover effect on the card */
+.review-card:hover,
+.btn:hover,
+.list-group-item:hover,
+.index-card:hover {
+    transform: scale(1.03); /* Slightly scale up the card */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition */
+}
+
+/* Optional: Darken the image slightly on hover */
+.review-card:hover img {
+    filter: brightness(0.9);
 }
 
 .review-card a {
@@ -440,12 +486,13 @@ footer .social-links li:active svg path {
 .btn-signup:hover,
 .btn-signup:active,
 .btn-logout:hover,
-.btn-logout:active {
+.btn-logout:active  {
     background-color: var(--accent-color);
     color: var(--text-color);
 }
 
 .btn-login,
+.btn-see-my,
 .btn-tbrlist {
     color: var(--bg-color);
     border: 1px solid var(--accent-color);
@@ -456,21 +503,120 @@ footer .social-links li:active svg path {
 .btn-login:hover,
 .btn-login:active,
 .btn-tbrlist:hover,
-.btn-tbrlist:active {
+.btn-tbrlist:active,
+.btn-see-my:hover,
+.btn-see-my:active {
     background-color: var(--accent-color);
     border: 1px solid var(--accent-color);
     color: var(--text-color);
 }
 
-/* Read More */
 
-.btn-read-more {
-    color: var(--bg-color);
-    border: 1px solid var(--accent-color);
-    background-color: var(--secondary-color);
-    font-weight: bold;
+/* Google Button */
+.gsi-material-button {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -webkit-appearance: none;
+    background-color: WHITE;
+    background-image: none;
+    border: 1px solid #747775;
+    -webkit-border-radius: 20px;
+    border-radius: 20px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    color: #1f1f1f;
+    cursor: pointer;
+    font-family: 'Roboto', arial, sans-serif;
+    font-size: 14px;
+    height: 40px;
+    letter-spacing: 0.25px;
+    outline: none;
+    overflow: hidden;
+    padding: 0 12px;
+    position: relative;
+    text-align: center;
+    -webkit-transition: background-color .218s, border-color .218s, box-shadow .218s;
+    transition: background-color .218s, border-color .218s, box-shadow .218s;
+    vertical-align: middle;
+    white-space: nowrap;
+    width: auto;
+    max-width: 400px;
+    min-width: min-content;
+  }
+  
+  .gsi-material-button .gsi-material-button-icon {
+    height: 20px;
+    margin-right: 12px;
+    min-width: 20px;
+    width: 20px;
+  }
+  
+  .gsi-material-button .gsi-material-button-content-wrapper {
+    -webkit-align-items: center;
+    align-items: center;
+    display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    height: 100%;
+    justify-content: space-between;
+    position: relative;
+    width: 100%;
+  }
+  
+  .gsi-material-button .gsi-material-button-contents {
+    -webkit-flex-grow: 1;
+    flex-grow: 1;
+    font-family: 'Roboto', arial, sans-serif;
+    font-weight: 500;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: top;
+  }
+  
+  .gsi-material-button .gsi-material-button-state {
+    -webkit-transition: opacity .218s;
+    transition: opacity .218s;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  
+  .gsi-material-button:disabled {
+    cursor: default;
+    background-color: #ffffff61;
+    border-color: #1f1f1f1f;
+  }
+  
+  .gsi-material-button:disabled .gsi-material-button-contents {
+    opacity: 38%;
+  }
+  
+  .gsi-material-button:disabled .gsi-material-button-icon {
+    opacity: 38%;
+  }
+  
+  .gsi-material-button:not(:disabled):active .gsi-material-button-state, 
+  .gsi-material-button:not(:disabled):focus .gsi-material-button-state {
+    background-color: #303030;
+    opacity: 12%;
+  }
+  
+  .gsi-material-button:not(:disabled):hover {
+    -webkit-box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 1px 3px 1px rgba(60, 64, 67, .15);
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 1px 3px 1px rgba(60, 64, 67, .15);
+  }
+  
+  .gsi-material-button:not(:disabled):hover .gsi-material-button-state {
+    background-color: #303030;
+    opacity: 8%;
+  }
 
-}
 
 /* Pagination */
 
