Add: review added success message, all log in/out/signup styled

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -427,6 +427,12 @@ p {
     border-top: 1px solid #ddd;
 }
 
+.or-text {
+    color:var(--secondary-color);
+    font-weight: 900;
+    font-size: x-large;
+}
+
 
 /* Footer */
 
