--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -24,8 +24,8 @@
                     {% endif %}
                     <form method="post" class="text-center mt-4">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-primary btn-lg">
-                          <i class="fab fa-google"></i>  {% trans "Continue" %}
+                        <button type="submit" class="btn btn-signup btn-lg">
+                          <i class="fab fa-google"></i>&nbsp;&nbsp; {% trans "Continue" %}
                         </button>
                     </form>
                 </div>
