--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -10,11 +10,12 @@
 <div class="container">
     <div class="row align-items-center text-left text-md-start" style="min-height: 400px;">
         <!-- Sign Up Form on the Left -->
-        <div class="col-md-5">
+        <div class="col-lg-1"></div>
+        <div class="col-md-5 mb-md-5 col-lg-4">
             <h3>{% trans "Sign In" %}</h3>
             <p>
                 {% blocktrans %}
-                Welcome back to the LitRPG Library. To leave a comment or like a post, please log in. If you
+                Welcome back to the LitRPG Library. To write a review or leave a comment, please log in. If you
                 have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
                 first.
                 {% endblocktrans %}
@@ -33,12 +34,12 @@
         <!-- OR Divider -->
         <div class="col-md-2 my-4 my-md-0 d-flex align-items-center justify-content-center">
             <div class="divider">
-                <span class="or-text">{% trans "OR" %}</span>
+                <span class="or-text">{% trans "- OR -" %}</span>
             </div>
         </div>
 
         <!-- Google Login Button on the Right -->
-        <div class="col-md-5 mb-5">
+        <div class="col-md-5 col-lg-4 mb-5">
             <div class="d-flex justify-content-center align-items-center">
                 <button class="gsi-material-button">
                     <div class="gsi-material-button-state"></div>
@@ -67,6 +68,7 @@
                     </div>
                 </button>
             </div>
+            <div class="col-lg-1"></div>
         </div>
     </div>
 </div>
