--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-8 mt-3 offset-md-2">
+    <div class="col-md-8 mt-3 offset-md-2 mb-5">
       <form class="signup" id="signup_form" method="post"
         action="{% url 'account_signup' %}">
         {% csrf_token %}
@@ -29,7 +29,7 @@
           value="{{ redirect_field_value }}" />
         {% endif %}
         <button class="btn btn-signup right" type="submit">
-          {% trans "Sign Up" %} &raquo;</button>
+          {% trans "Sign Up" %} </button>
       </form>
     </div>
   </div>
