--- a/review/templates/review/review_edit.html
+++ b/review/templates/review/review_edit.html
@@ -16,8 +16,8 @@
         <div class="form-group">
           {{ form.as_p }}
         </div>
-        <button class="btn btn-secondary" type="submit">Save Changes</button>
-        <a href="{% url 'review_detail' slug=review.slug %}" class="btn btn-light">Cancel</a>
+        <button class="btn btn-login" type="submit">Save Changes</button>
+        <a href="{% url 'review_detail' slug=review.slug %}" class="btn btn-signup">Cancel</a>
       </form>
     </div>
   </div>
