--- a/review/templates/review/review_list.html
+++ b/review/templates/review/review_list.html
@@ -28,7 +28,8 @@
             </a>
         </div>
         {% if forloop.counter|divisibleby:3 and not forloop.last %}
-        </div><div class="row row-cols-1 row-cols-md-3 g-4 mx-4 my-4"> <!-- Start a new row every 3 cards -->
+        </div>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mx-4 my-4"> <!-- Start a new row every 3 cards -->
         {% endif %}
         {% endfor %}
     </div>
@@ -39,12 +40,12 @@
         <ul class="pagination justify-content-center mt-4">
             {% if page_obj.has_previous %}
             <li class="page-item">
-                <a href="?page={{ page_obj.previous_page_number }}" class="page-link btn-lg btn-page">PREV</a>
+                <a href="?page={{ page_obj.previous_page_number }}" class="page-link btn-lg btn-page">Prev</a>
             </li>
             {% endif %}
             {% if page_obj.has_next %}
             <li class="page-item">
-                <a href="?page={{ page_obj.next_page_number }}" class="page-link btn-lg btn-page">NEXT</a>
+                <a href="?page={{ page_obj.next_page_number }}" class="page-link btn-lg btn-page">Next</a>
             </li>
             {% endif %}
         </ul>
