--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -221,7 +221,11 @@ p {
     line-height: 1.6;
     /* Optional: Improve readability with better line spacing */
 }
-
+.to-be-read-banner{
+    border: 2px solid var(--secondary-color);
+    max-height: 90%;
+    max-width:auto;
+}
 /* Cards */
 
 .card {
@@ -398,6 +402,10 @@ p {
     opacity: 1;
 }
 
+.review-subtitle {
+    color:var(--bg-color);
+}
+
 /* TBR Page */
 
 .tbr-card {
@@ -477,7 +485,7 @@ footer .social-links li:active svg path {
 
 
 
-/* Buttons */
+/* ---------Buttons----------- */
 
 /* Register */
 .btn-signup,
@@ -499,7 +507,8 @@ footer .social-links li:active svg path {
 
 .btn-login,
 .btn-see-my,
-.btn-tbrlist {
+.btn-tbrlist,
+.btn-book-add {
     color: var(--bg-color);
     border: 1px solid var(--accent-color);
     background-color: var(--secondary-color);
@@ -511,7 +520,9 @@ footer .social-links li:active svg path {
 .btn-tbrlist:hover,
 .btn-tbrlist:active,
 .btn-see-my:hover,
-.btn-see-my:active {
+.btn-see-my:active,
+.btn-book-add:hover,
+.btn-book-add:active  {
     background-color: var(--accent-color);
     border: 1px solid var(--accent-color);
     color: var(--text-color);
@@ -654,7 +665,8 @@ footer .social-links li:active svg path {
     color: var(--bg-color);
 }
 
-.btn-delete {
+.btn-delete,
+.btn-review-delete  {
     color: var(--bg-color);
     border: 1px solid var(--accent-color);
     background: var(--highlight-color);
@@ -662,22 +674,10 @@ footer .social-links li:active svg path {
 }
 
 .btn-delete:hover,
-.btn-delete:active {
-    background-color: var(--accent-color);
-    border: 1px solid var(--accent-color);
-    color: var(--bg-color);
-}
-
-.btn-review-delete {
-    color: var(--text-color);
-    border: 1px solid var(--accent-color);
-    background-color: var(--highlight-color);
-    font-weight: bold;
-}
-
+.btn-delete:active,
 .btn-review-delete:hover,
 .btn-review-delete:active {
-    background-color: var(--secondary-color);
+    background-color: var(--accent-color);
     border: 1px solid var(--accent-color);
     color: var(--bg-color);
 }
@@ -696,6 +696,27 @@ footer .social-links li:active svg path {
     background-color: var(--secondary-color);
     border: 1px solid var(--accent-color);
     color: var(--bg-color);
+}
+
+/* likes */
+
+.btn-outline-primary,
+.like-review-btn,
+.like-comment-btn {
+    color: var(--secondary-color);
+    border:none;
+}
+
+
+.like-review-btn:hover,
+.like-review-btn:active,
+.like-comment-btn:hover,
+.like-comment-btn:active{
+    background-color: transparent;
+    transform: scale(1.03); /* Slightly scale up the card */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition */
+
 }
 
 
